Fixed unstyled html flickering

--- a/wp-content/themes/tomoveit/include/scss/general.scss
+++ b/wp-content/themes/tomoveit/include/scss/general.scss
@@ -3,6 +3,7 @@
 
 html {
   font-size: 100%;
+  display: block;
 }
 
 body {
